--- a/csharp/GUI/OpenSvip.GUI.csproj
+++ b/csharp/GUI/OpenSvip.GUI.csproj
@@ -65,10 +65,6 @@
       <HintPath>..\packages\WindowsAPICodePack-Shell.1.1.1\lib\Microsoft.WindowsAPICodePack.Shell.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
-      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -81,6 +77,9 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="Tomlet, Version=3.1.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Samboy063.Tomlet.3.1.3\lib\net35\Tomlet.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
@@ -95,6 +94,7 @@
       <DependentUpon>AboutDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="AsyncObservableCollection.cs" />
+    <Compile Include="Configurations.cs" />
     <Compile Include="FileOverwriteDialog.xaml.cs">
       <DependentUpon>FileOverwriteDialog.xaml</DependentUpon>
     </Compile>
@@ -153,6 +153,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="ScrollBarDictionary.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="TaskListViewItem.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -196,6 +200,10 @@
     <ProjectReference Include="..\Framework\OpenSvip.Framework.csproj">
       <Project>{1a025cf4-6ce6-42f9-ad09-16e56d840d95}</Project>
       <Name>OpenSvip.Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Library\OpenSvip.Library.csproj">
+      <Project>{c0982090-a08e-45b8-953a-6d1750a69cdd}</Project>
+      <Name>OpenSvip.Library</Name>
     </ProjectReference>
     <ProjectReference Include="..\Model\OpenSvip.Model.csproj">
       <Project>{f0cf4e57-33f4-4a63-a45f-69727058c24a}</Project>
