--- a/csharp/GUI/packages.config
+++ b/csharp/GUI/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="MaterialDesignColors" version="2.0.5" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="4.4.0" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="Samboy063.Tomlet" version="3.1.3" targetFramework="net472" />
   <package id="WindowsAPICodePack-Core" version="1.1.2" targetFramework="net472" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net472" />
 </packages>
