--- a/csharp/GUI/OpenSvip.GUI.csproj
+++ b/csharp/GUI/OpenSvip.GUI.csproj
@@ -94,7 +94,7 @@
       <DependentUpon>AboutDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="AsyncObservableCollection.cs" />
-    <Compile Include="Configurations.cs" />
+    <Compile Include="Config\Configurations.cs" />
     <Compile Include="FileOverwriteDialog.xaml.cs">
       <DependentUpon>FileOverwriteDialog.xaml</DependentUpon>
     </Compile>
@@ -210,6 +210,7 @@
       <Name>OpenSvip.Model</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.4.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.4.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
