--- a/csharp/Plugins/Vogen/packages.config
+++ b/csharp/Plugins/Vogen/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="ICSharpCode.SharpZipLib.dll" version="0.85.4.369" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="NPinyin" version="0.2.6321.26573" targetFramework="net472" />
 </packages>
