--- a/csharp/Framework/OpenSvip.Framework.csproj
+++ b/csharp/Framework/OpenSvip.Framework.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Choice.cs" />
+    <Compile Include="ConstValues.cs" />
     <Compile Include="ConverterOptions.cs" />
     <Compile Include="Errors.cs" />
     <Compile Include="Option.cs" />
