--- a/csharp/Console/OpenSvip.Console.csproj
+++ b/csharp/Console/OpenSvip.Console.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net472</TargetFramework>
@@ -8,6 +8,9 @@
         <RootNamespace>OpenSvip.Console</RootNamespace>
         <OutputType>Exe</OutputType>
         <PlatformTarget>AnyCPU</PlatformTarget>
+        <Version>1.2.0</Version>
+        <AssemblyVersion>1.2.0.0</AssemblyVersion>
+        <FileVersion>1.2.0.0</FileVersion>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
@@ -20,6 +23,7 @@
 
     <ItemGroup>
       <PackageReference Include="CommandLineParser" Version="2.9.0-preview1" />
+      <PackageReference Include="NullLib.ConsoleTable" Version="1.0.3.2" />
     </ItemGroup>
 
     <ItemGroup>
