--- a/csharp/GUI/OpenSvip.GUI.csproj
+++ b/csharp/GUI/OpenSvip.GUI.csproj
@@ -106,6 +106,7 @@
     <Compile Include="OptionTreeViewItem.xaml.cs">
       <DependentUpon>OptionTreeViewItem.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PluginComboBoxItemTemplateSelector.cs" />
     <Compile Include="PluginDetailsBoard.xaml.cs">
       <DependentUpon>PluginDetailsBoard.xaml</DependentUpon>
     </Compile>
@@ -114,6 +115,7 @@
     <Compile Include="TaskListViewItem.xaml.cs">
       <DependentUpon>TaskListViewItem.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UpdateChecker.cs" />
     <Compile Include="ValueConverterGroup.cs" />
     <Compile Include="ValueConverters.cs" />
     <Compile Include="Dialog\YesNoDialog.xaml.cs">
@@ -220,9 +222,6 @@
   <ItemGroup>
     <PackageReference Include="MaterialDesignThemes">
       <Version>4.5.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf">
-      <Version>1.1.39</Version>
     </PackageReference>
     <PackageReference Include="Panuon.UI.Silver">
       <Version>2.2.18</Version>
