--- a/csharp/GUI/packages.config
+++ b/csharp/GUI/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MaterialDesignColors" version="2.1.0-ci390" targetFramework="net472" />
-  <package id="MaterialDesignThemes" version="4.7.0-ci390" targetFramework="net472" />
+  <package id="MaterialDesignColors" version="2.0.6" targetFramework="net472" />
+  <package id="MaterialDesignThemes" version="4.5.0" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net472" />
   <package id="Panuon.UI.Core" version="2.2.6" targetFramework="net472" />
   <package id="Panuon.UI.Silver" version="2.2.20" targetFramework="net472" />
-  <package id="Samboy063.Tomlet" version="5.0.1" targetFramework="net472" />
+  <package id="Samboy063.Tomlet" version="3.1.3" targetFramework="net472" />
   <package id="WindowsAPICodePack-Core" version="1.1.2" targetFramework="net472" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net472" />
 </packages>
