--- a/csharp/Plugins/Json2Diffsinger/Json2DiffSinger.csproj
+++ b/csharp/Plugins/Json2Diffsinger/Json2DiffSinger.csproj
@@ -37,11 +37,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommandLine, Version=2.9.1.0, Culture=neutral, PublicKeyToken=5a870481e358d379, processorArchitecture=MSIL">
-      <HintPath>..\packages\CommandLineParser.2.9.1\lib\net461\CommandLine.dll</HintPath>
+      <HintPath>..\..\packages\CommandLineParser.2.9.1\lib\net461\CommandLine.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -82,15 +82,15 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Framework\OpenSvip.Framework.csproj">
+    <ProjectReference Include="..\..\Framework\OpenSvip.Framework.csproj">
       <Project>{1a025cf4-6ce6-42f9-ad09-16e56d840d95}</Project>
       <Name>OpenSvip.Framework</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Library\OpenSvip.Library.csproj">
+    <ProjectReference Include="..\..\Library\OpenSvip.Library.csproj">
       <Project>{C0982090-A08E-45B8-953A-6D1750A69CDD}</Project>
       <Name>OpenSvip.Library</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Model\OpenSvip.Model.csproj">
+    <ProjectReference Include="..\..\Model\OpenSvip.Model.csproj">
       <Project>{f0cf4e57-33f4-4a63-a45f-69727058c24a}</Project>
       <Name>OpenSvip.Model</Name>
     </ProjectReference>
