--- a/csharp/GUI/OpenSvip.GUI.csproj
+++ b/csharp/GUI/OpenSvip.GUI.csproj
@@ -5,7 +5,7 @@
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
         <ProjectGuid>{EBF57F98-939B-4371-A07F-0DE8A6D59B63}</ProjectGuid>
-        <OutputType>Exe</OutputType>
+        <OutputType>WinExe</OutputType>
         <RootNamespace>OpenSvip.GUI</RootNamespace>
         <AssemblyName>OpenSvip.GUI</AssemblyName>
         <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
